--- a/templates/program/season_show.html.twig
+++ b/templates/program/season_show.html.twig
@@ -8,8 +8,8 @@
 			<h1 class="mt-0">Saison
 				{{ season.number }}
 				de
-				{{ program.title }}</h1>
-			<p>{{ season.id }}</p>
+				{{ program.title }}:</h1>
+			<p>{{ season.description }}</p>
 
 			<h2>Liste des épisodes:
 			</h2>
