--- a/templates/season/show.html.twig
+++ b/templates/season/show.html.twig
@@ -1,14 +1,34 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Saisons #{{ season.id }}
-{% endblock %}
+{% block title %}Season{% endblock %}
 
 {% block body %}
-	<div class="media">
-		<div class="media-body">
-			<h1 class="mt-0">{{ season.number }}</h1>
-			<p>{{ season.year }}</p>
-			<p>{{ season.description }}</p>
-		</div>
-	</div>
+    <h1>Season</h1>
+
+    <table class="table">
+        <tbody>
+            <tr>
+                <th>Id</th>
+                <td>{{ season.id }}</td>
+            </tr>
+            <tr>
+                <th>Number</th>
+                <td>{{ season.number }}</td>
+            </tr>
+            <tr>
+                <th>Year</th>
+                <td>{{ season.year }}</td>
+            </tr>
+            <tr>
+                <th>Description</th>
+                <td>{{ season.description }}</td>
+            </tr>
+        </tbody>
+    </table>
+
+    <a href="{{ path('app_season_index') }}">back to list</a>
+
+    <a href="{{ path('app_season_edit', {'id': season.id}) }}">edit</a>
+
+    {{ include('season/_delete_form.html.twig') }}
 {% endblock %}
